import { describe, expect, it } from "vitest";
import { UnsupportedDeviceError, renderAllConfigs, renderCiscoIosConfig } from "../src/render.js";
import { g1Design, g2Design, g4Design } from "./fixtures.js";

describe("renderAllConfigs — G1 branch-office (dual HSRP)", () => {
  const configs = renderAllConfigs(g1Design);

  it("matches the recorded snapshot for every cisco-ios device", () => {
    expect(configs).toMatchSnapshot();
  });

  it("renders a config for every supported device: cisco-ios routers/switches and the Fortinet firewall", () => {
    expect(Object.keys(configs).sort()).toEqual(["fw-01", "rtr-01", "rtr-02", "sw-01", "sw-02"]);
  });

  it("starts every config with the mandatory lab-validation sentence, in each vendor's own comment syntax", () => {
    for (const config of Object.values(configs)) {
      const firstLine = config.split("\n")[0]!;
      expect(firstLine).toContain("Base configuration generated by NetDesign.app — validate in a lab before production.");
    }
    // cisco uses `!`, fortigate uses `#`
    expect(configs["rtr-01"]!.startsWith("! Base configuration")).toBe(true);
    expect(configs["fw-01"]!.startsWith("# Base configuration")).toBe(true);
  });

  it("gives the two HSRP routers the same virtual IP and group, but different priorities", () => {
    const rtr01 = configs["rtr-01"]!;
    const rtr02 = configs["rtr-02"]!;
    expect(rtr01).toContain("standby 10 ip 10.30.2.1");
    expect(rtr02).toContain("standby 10 ip 10.30.2.1");
    expect(rtr01).toContain("standby 10 priority 110");
    expect(rtr02).toContain("standby 10 priority 100");
    expect(rtr01).toContain("standby 10 preempt");
  });

  it("gives each router its own distinct subinterface address per VLAN, not the shared gateway", () => {
    const rtr01 = configs["rtr-01"]!;
    const rtr02 = configs["rtr-02"]!;
    expect(rtr01).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.30.2.2 255.255.255.0");
    expect(rtr02).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.30.2.3 255.255.255.0");
  });

  it("points the default route at the firewall's real IP on that router's P2P link, not a guess", () => {
    expect(configs["rtr-01"]).toContain("ip route 0.0.0.0 0.0.0.0 10.30.1.4");
    expect(configs["rtr-02"]).toContain("ip route 0.0.0.0 0.0.0.0 10.30.1.6");
  });

  it("renders the switch's global VLAN database and trunk allowed-VLAN list", () => {
    const sw01 = configs["sw-01"]!;
    expect(sw01).toContain("vlan 10\n name corp-data");
    expect(sw01).toContain("switchport trunk allowed vlan 10,20,30");
  });

  it("omits OSPF and NAT overload sections when the design doesn't use them (this composer always uses static routing)", () => {
    for (const config of Object.values(configs)) {
      expect(config).not.toContain("router ospf");
      expect(config).not.toContain("ip nat");
    }
  });
});

describe("renderAllConfigs — G4 smb-flat (single router, no redundancy)", () => {
  const configs = renderAllConfigs(g4Design);

  it("matches the recorded snapshot", () => {
    expect(configs).toMatchSnapshot();
  });

  it("gives the lone router's subinterface the VLAN gateway address itself, with no HSRP lines at all", () => {
    const rtr01 = configs["rtr-01"]!;
    expect(rtr01).toContain("interface GigabitEthernet0/1.10\n encapsulation dot1Q 10\n ip address 10.40.2.1 255.255.255.0");
    expect(rtr01).not.toContain("standby");
  });
});

describe("renderAllConfigs — G2 campus-three-tier (L3 fabric)", () => {
  const configs = renderAllConfigs(g2Design);

  it("matches the recorded snapshot for every cisco-ios device", () => {
    expect(configs).toMatchSnapshot();
  });

  it("renders a config for every campus device: firewall, edge routers, core + distribution + access switches", () => {
    expect(Object.keys(configs).sort()).toEqual([
      "acc-01", "acc-02", "acc-03", "core-01", "core-02", "dist-01", "dist-02", "fw-01", "rtr-01", "rtr-02",
    ]);
  });

  it("puts the VLAN gateways (SVIs) with HSRP on the distribution switches", () => {
    const dist01 = configs["dist-01"]!;
    const dist02 = configs["dist-02"]!;
    // The SVI IS the gateway: dist-01 owns .2, dist-02 owns .3, both standby on the shared virtual .1.
    expect(dist01).toContain("interface Vlan10\n ip address 10.20.2.2 255.255.255.0");
    expect(dist02).toContain("interface Vlan10\n ip address 10.20.2.3 255.255.255.0");
    expect(dist01).toContain("standby 10 ip 10.20.2.1");
    expect(dist02).toContain("standby 10 ip 10.20.2.1");
    // Deterministic active/standby: dist-01 (alphabetically first) is active.
    expect(dist01).toContain("standby 10 priority 110");
    expect(dist02).toContain("standby 10 priority 100");
    // L3 switch: routing enabled, and it runs OSPF advertising its SVI subnets.
    expect(dist01).toContain("ip routing");
    expect(dist01).toContain("network 10.20.2.0 0.0.0.255 area 0");
  });

  it("carries the access-facing downlinks as L2 trunks on the distribution switches", () => {
    const dist01 = configs["dist-01"]!;
    expect(dist01).toContain("switchport mode trunk");
    expect(dist01).toContain("switchport trunk allowed vlan 10,20");
  });

  it("keeps the core switches pure L3 transit — routed ports and OSPF, no VLANs/SVIs/trunks", () => {
    for (const id of ["core-01", "core-02"]) {
      const core = configs[id]!;
      expect(core).toContain("ip routing");
      expect(core).toContain("no switchport");
      expect(core).toContain("router ospf 1");
      expect(core).not.toContain("interface Vlan");
      expect(core).not.toContain("switchport mode trunk");
      expect(core).not.toContain("standby ");
    }
  });

  it("has the edge routers originate the default into OSPF (static default toward the firewall)", () => {
    for (const id of ["rtr-01", "rtr-02"]) {
      const rtr = configs[id]!;
      expect(rtr).toContain("router ospf 1");
      expect(rtr).toContain("default-information originate");
      expect(rtr).toMatch(/ip route 0\.0\.0\.0 0\.0\.0\.0 \d/);
    }
  });

  it("keeps access switches L2-only: VLAN db + trunks, no routing", () => {
    const acc01 = configs["acc-01"]!;
    expect(acc01).toContain("vlan 10\n name corp-data");
    expect(acc01).toContain("switchport mode trunk");
    expect(acc01).not.toContain("ip routing");
    expect(acc01).not.toContain("router ospf");
  });
});

describe("renderCiscoIosConfig error handling", () => {
  it("throws UnsupportedDeviceError for a non-cisco-ios vendor", () => {
    const firewall = g1Design.devices.find((d) => d.id === "fw-01")!;
    expect(() => renderCiscoIosConfig(firewall, g1Design)).toThrow(UnsupportedDeviceError);
    expect(() => renderCiscoIosConfig(firewall, g1Design)).toThrow(/vendorHint "cisco-ios"/);
  });

  it("throws UnsupportedDeviceError for a cisco-ios device with an unsupported role", () => {
    // load-balancer is L3-capable but has no cisco-ios template (a future vendor-rollout item).
    const fakeLoadBalancer = { ...g1Design.devices[0]!, id: "lb-01", role: "load-balancer" as const, vendorHint: "cisco-ios" as const };
    expect(() => renderCiscoIosConfig(fakeLoadBalancer, g1Design)).toThrow(UnsupportedDeviceError);
    expect(() => renderCiscoIosConfig(fakeLoadBalancer, g1Design)).toThrow(/no cisco-ios template for role "load-balancer"/);
  });
});
